--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -523,6 +523,7 @@
     <Content Include="Areas\Business\Css\XXXX\Common\XXXX_Common.css" />
     <Content Include="Areas\Business\Css\XXXX\FC\FCXX_DZF.css" />
     <Content Include="Areas\Business\Css\XXXX\FC\FCXX_ESF.css" />
+    <Content Include="Areas\Business\Css\XXXX\FC\FCXX_SP.css" />
     <Content Include="Areas\Business\Css\XXXX\FC\FCXX_ZZF.css" />
     <Content Include="Areas\Business\Css\HTGL\SHGJ\YXCZ.css" />
     <Content Include="Areas\Business\Css\HTGL\WDZH\YXYZ.css" />
@@ -583,10 +584,10 @@
     <Content Include="Areas\Business\Scripts\Business\Common\LBHead.js" />
     <Content Include="Areas\Business\Scripts\Business\Common\Top.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\Common\CXLB_Common.js" />
-    <Content Include="Areas\Business\Scripts\Business\CXLB\FCCX\FCCX_DZF.js" />
-    <Content Include="Areas\Business\Scripts\Business\CXLB\FCCX\FCCX_ESF.js" />
-    <Content Include="Areas\Business\Scripts\Business\CXLB\FCCX\FCCX_SP.js" />
-    <Content Include="Areas\Business\Scripts\Business\CXLB\FCCX\FCCX_ZZF.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\FCCX\FC_DZF.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\FCCX\FC_ESF.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\FCCX\FC_SP.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\FCCX\FC_ZZF.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_GCC.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_GCCYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_HC.js" />
@@ -975,9 +976,10 @@
     <Content Include="Areas\Business\Scripts\Business\Other\YHDL.js" />
     <Content Include="Areas\Business\Scripts\Business\HTGL\HTGL.js" />
     <Content Include="Areas\Business\Scripts\Business\Other\YHZC.js" />
-    <Content Include="Areas\Business\Scripts\Business\XXXX\FCXX\FCXX_DZF.js" />
-    <Content Include="Areas\Business\Scripts\Business\XXXX\FCXX\FCXX_ESF.js" />
-    <Content Include="Areas\Business\Scripts\Business\XXXX\FCXX\FCXX_ZZF.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\FCXX\FC_DZF.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\FCXX\FC_ESF.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\FCXX\FC_SP.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\FCXX\FC_ZZF.js" />
     <Content Include="Areas\Business\Scripts\Business\HTGL\SHGJ\YXCZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTGL\WDZH\YXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTGL\WDZH\YXYZCG.js" />
@@ -1683,16 +1685,17 @@
     <Content Include="Areas\Business\Views\NLMFY\NLMFY_NJJSB.cshtml" />
     <Content Include="Areas\Business\Views\NLMFY\NLMFY_NCPJG.cshtml" />
     <Content Include="Areas\Business\Views\SY\SY.cshtml" />
-    <Content Include="Areas\Business\Views\FCCX\FCCX_ZZF.cshtml" />
+    <Content Include="Areas\Business\Views\FCCX\FC_ZZF.cshtml" />
     <Content Include="Areas\Business\Views\Shared\QT.cshtml" />
-    <Content Include="Areas\Business\Views\FCXX\FCXX_ZZF.cshtml" />
+    <Content Include="Areas\Business\Views\FCXX\FC_ZZF.cshtml" />
     <Content Include="Areas\Business\Views\Shared\XXXX.cshtml" />
-    <Content Include="Areas\Business\Views\FCCX\FCCX_DZF.cshtml" />
-    <Content Include="Areas\Business\Views\FCXX\FCXX_DZF.cshtml" />
+    <Content Include="Areas\Business\Views\FCCX\FC_DZF.cshtml" />
+    <Content Include="Areas\Business\Views\FCXX\FC_DZF.cshtml" />
     <Content Include="Areas\Business\Views\FC\FC_ESF.cshtml" />
-    <Content Include="Areas\Business\Views\FCCX\FCCX_ESF.cshtml" />
-    <Content Include="Areas\Business\Views\FCXX\FCXX_ESF.cshtml" />
-    <Content Include="Areas\Business\Views\FCCX\FCCX_SP.cshtml" />
+    <Content Include="Areas\Business\Views\FCCX\FC_ESF.cshtml" />
+    <Content Include="Areas\Business\Views\FCXX\FC_ESF.cshtml" />
+    <Content Include="Areas\Business\Views\FCCX\FC_SP.cshtml" />
+    <Content Include="Areas\Business\Views\FCXX\FC_SP.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
