--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -113,7 +113,7 @@
     <Compile Include="Maps\ES\ES_WHYL_WTHWYQJBXX_Map.cs" />
     <Compile Include="Maps\ES\ES_WHYL_WYXNWPJBXX_Map.cs" />
     <Compile Include="Maps\ES\ES_WHYL_YSPSCPJBXX_Map.cs" />
-    <Compile Include="Maps\FC\FC_CKCFTDCWJBXX_Map.cs" />
+    <Compile Include="Maps\FC\FC_CFCKTDCWJBXX_Map.cs" />
     <Compile Include="Maps\FC\FC_DZFJBXX_Map.cs" />
     <Compile Include="Maps\FC\FC_SPJBXX_Map.cs" />
     <Compile Include="Maps\FC\FC_XZLJBXX_Map.cs" />
@@ -353,7 +353,7 @@
     <Compile Include="Models\ES\ES_WHYL_WTHWYQJBXX.cs" />
     <Compile Include="Models\ES\ES_WHYL_WYXNWPJBXX.cs" />
     <Compile Include="Models\ES\ES_WHYL_YSPSCPJBXX.cs" />
-    <Compile Include="Models\FC\FC_CKCFTDCWJBXX.cs" />
+    <Compile Include="Models\FC\FC_CFCKTDCWJBXX.cs" />
     <Compile Include="Models\FC\FC_DZFJBXX.cs" />
     <Compile Include="Models\FC\FC_ESFJBXX.cs" />
     <Compile Include="Models\FC\FC_SPJBXX.cs" />
@@ -537,6 +537,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\FC\FC_DZFView.cs" />
     <Compile Include="ViewModels\FC\FC_ESFView.cs" />
+    <Compile Include="ViewModels\FC\FC_CFCKTDCWView.cs" />
     <Compile Include="ViewModels\FC\FC_XZLView.cs" />
     <Compile Include="ViewModels\FC\FC_SPView.cs" />
     <Compile Include="ViewModels\FC\FC_ZZFView.cs" />
