--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -60,6 +60,7 @@
     <Compile Include="BLL\BaseBLL.cs" />
     <Compile Include="BLL\BZZXBLL.cs" />
     <Compile Include="BLL\CommonBLL.cs" />
+    <Compile Include="BLL\CXLB\CLCXBLL.cs" />
     <Compile Include="BLL\HTFB\CL_BLL.cs" />
     <Compile Include="BLL\CXLB\FCCXBLL.cs" />
     <Compile Include="BLL\HTFB\CW_BLL.cs" />
