--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -539,6 +539,9 @@
     <Compile Include="Models\ZXJC\ZXJC_JJJBXX.cs" />
     <Compile Include="Models\ZXJC\ZXJC_JZFWJBXX.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\CL\CL_ZXCView.cs" />
+    <Compile Include="ViewModels\CL\CL_DDCView.cs" />
+    <Compile Include="ViewModels\CL\CL_SLCView.cs" />
     <Compile Include="ViewModels\CL\CL_MTCView.cs" />
     <Compile Include="ViewModels\CL\CL_KCView.cs" />
     <Compile Include="ViewModels\CL\CL_HCView.cs" />
